# Christex-Bounty

./: README.md
Tiplink Deep Dive/: README.md
transfer-hooks/: Cargo.toml  README.md
transfer-hooks/contracts/: TokenWithHooks.rs  TokenWithHooks.sol
transfer-hooks/scripts/: deploy.js  deploy.sh  interact.js  interact.sh
transfer-hooks/src/: lib.rs  transfer_hooks.rs
transfer-hooks/tests/: integration_tests.rs  test_token_with_hooks.js  test_token_with_hooks.rs  transfer_hooks_test.rs
