[package]
name = "transfer-hooks"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { version = "1.10", features = ["full"] }
spl-token = "3.2.0"
spl-transfer-hook = "0.1.0"  # Hypothetical version; use the actual version available[package]
name = "transfer-hooks"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { version = "1.10", features = ["full"] }
spl-token = "3.2.0"
spl-transfer-hook = "0.1.0"  # Hypothetical version; use the actual version available